# libmopiqy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  libmopiqy.pri  libmopiqy.pro  mopiqy_core.pri  mopiqy_core.pro  version.pri
demos/: demos.pro
include/: playbackcontroller.h  playlistscontroller.h  tracklistcontroller.h
mopiqy_core/: corelistener.cpp  corelistener.h  jsonwebsocket.h  librarycontroller.cpp  mopidyclient.cpp  mopidyclient.h  mopidymodels.h  mopidyparser.cpp  mopidyparser.h  mopiqy_core.pro  mopiqy_export.h  playbackcontroller.cpp  playbackcontroller.h  playlistscontroller.cpp  tracklistcontroller.cpp
src/: basecontrollerimpl.cpp  basecontrollerimpl.h  basecontrollerinterface.h  controllerinterface.cpp  controllerinterface.h  corecontroller.cpp  corecontroller.h  corecontrollerimpl.cpp  corecontrollerimpl.h  corelistener.cpp  eventlistener.cpp  eventlistener.h  find_boost.pri  historycontrollerimpl.cpp  historycontrollerimpl.h  jsonrpchandler.cpp  jsonrpchandler.h  jsonrpcmessage.cpp  jsonrpcmessage.h  jsonwebsocket.cpp  jsonwebsocket.h  librarycontroller.cpp  librarycontroller.h  librarycontrollerimpl.cpp  librarycontrollerimpl.h  mixercontrollerimpl.cpp  mixercontrollerimpl.h  modeltranslator.cpp  modeltranslator.h  mopidyclient.cpp  mopidyclient.h  mopidyclient_p.h  mopidymodelfactory.cpp  mopidymodelfactory.h  mopidymodels.h  mopidyparser.cpp  mopidyparser.h  mopiqy.h  mopiqy_export.h  mopiqyhelper.cpp  (+21 more)
src2/: corecontroller.h  mopidyclient.h
src_old/: controllerinterface.cpp  corecontroller.cpp  mopidymodels.h  mopidyparser.cpp  mopiqyhelper.cpp  remoteclient.cpp  remoteclient.h  tracklistcontroller.h
tests/: main.cpp  testcorecontroller.cpp  testjsonwebsocket.h  (+25 more)
(+44 files in other folders)
